--- a/index.html
+++ b/index.html
@@ -68,14 +68,13 @@
 	{% endfor %}
 
 <script type="text/javascript">
-	var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-	document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 </script>
 <script type="text/javascript">
-	try {
-		var pageTracker = _gat._getTracker("UA-7248693-1");
-		pageTracker._trackPageview();
-	} catch(err) {}
-</script>
+try {
+var pageTracker = _gat._getTracker("UA-7258394-1");
+pageTracker._trackPageview();
+} catch(err) {}</script>
   </body>
 </html>
