Code allégé et amélioré (j'avais oublié que Model.get(keys) existe.^^)

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 					<div>
 						<p>Followed Friends</p>
 						{% for friend in followed %}
-							<a>{{ friend }}</a>
+							<a>{{ friend.nickname }}</a>
 							<br>
 						{% endfor %}
 					</div>
