--- a/account_settings/account_settings.html
+++ b/account_settings/account_settings.html
@@ -44,7 +44,7 @@
 						<div>
 							<p>Followed Friend</p>
 							{% for friend in followed %}
-								<a>{{ friend }}</a>
+								<a>{{ friend.nickname }}</a>
 								<br>
 							{% endfor %}
 						</div>
