--- a/base.html
+++ b/base.html
@@ -2,7 +2,7 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-	<link type="text/css" rel="stylesheet" href="/views/stylesheets/main.css" />
+	<link type="text/css" rel="stylesheet" href="/stylesheets/main.css" />
 	<title>{% block title %}Pint{% endblock title %}</title>
 </head>
 
