--- a/base.html
+++ b/base.html
@@ -8,18 +8,22 @@
 
 <body>	
 	<div id="mainbox">
-		<div id="header">
-			{% block header %}
-			<a href="{{ url }}" class="loglink">{{ url_linktext }}</a>
+		<div id="top">
+			{% block top %}
+            {% ifequal user_status "anon" %}
+			<a href="{{ log_url }}" class="loglink">Login</a>
+            {% else %}
+            <a href="{{ log_url }}" class="loglink">Logout</a>
+            {% endif %}
 			<h1>{{ random_title }}</h1>
-			<cite>&#8220;Share and share alike.&#8221;</cite>
-			{% endblock header %}
+			<!--<cite>&#8220;Share and share alike.&#8221;</cite>-->
+			{% endblock top %}
 		</div>
 
 		<div id="rightnav">
-			{% block firstpanel %}
-			{% if not anon %}
-			<div class="navbox">
+			{% block leftblocs %}
+			{% ifnotequal user_status "anon" %}
+			<div class="navbox">"
 				<div class="title">
 					<h3>Hi!</h3>
 				</div>
@@ -28,9 +32,9 @@
 				</div>
 			</div>
 			{% endif %}
-			{% endblock firstpanel %}
+			{% endblock leftblocs %}
 
-			{% if not anon %}
+			{% ifnotequal user_status "anon" %}
 			{% if is_admin %}
 			<div class="navbox">
 				<div class="title">
@@ -63,18 +67,18 @@
 					<h3>Info</h3>
 				</div>
 				<div class="content">
-					{% if not anon %}
+					{% ifnotequal user_status "anon" %}
 					<div>
 						<h4>Following</h4>
-						{% for friend in following %}
-							<a>{{ friend.nickname }}</a>
+						{% for followed in followed_list %}
+							<a>{{ followed.nickname }}</a>
 							<br>
 						{% endfor %}
 					</div>
 					<div>
-						<h4>They follow you</h4>
-						{% for user in followed_by %}
-							<a>{{ user.nickname }}</a>
+						<h4>Followers</h4>
+						{% for follower in followers_list %}
+							<a>{{ follower.nickname }}</a>
 							<br>
 						{% endfor %}
 					</div>
@@ -91,7 +95,7 @@
 			<ul id="tabmenu">
 				{% block tabmenu %}
 				<li><a href="/" id="current">Pints</a></li>
-				{% if not anon and not unknown_user %}
+				{% ifequal user_status "registered" %}
 				<li><a href="/account_settings">Account Settings</a></li>
 				{% endif %}
 				{% endblock tabmenu %}
