Suppression du random (aurait pû être la cause de l'augmentation du taux de consommation CPU

--- a/base.html
+++ b/base.html
@@ -15,8 +15,8 @@
 			{% else %}
 			<a href="{{ log_url }}" class="loglink">Logout</a>
 			{% endifequal %}
-			<h1>{{ random_title }}</h1>
-			<!--<cite>&#8220;Share and share alike.&#8221;</cite>-->
+			<h1>Pint</h1>
+			<cite>&#8220;Share and share alike.&#8221;</cite>
 		{% endblock %}
 		</div>
 
