Un premier jet d'une boîte de recherche de nickname. Bon il manque plus de souplesse dans la recherche (pour le moment seul le nickname exact donne une réponse unique...). Ignorance de la casse - longueur de Levenshtein... autant de choses à mettre en place. Youpi du boulot. ^^

--- a/account_settings.html
+++ b/account_settings.html
@@ -29,7 +29,7 @@
 	<form action="/account_settings/post" method="post" class="composer">
 		<div>
 			<p>Enter a new nick if you wish: </p>
-			<input name="nickname" type="text" value={{ user_account.nickname }}>
+			<input name="nickname" type="text" value={{ user_account.nickname }} />
 		</div>
 	  	<div>
 			<p>Any one you want to follow?</p>
