--- a/index.html
+++ b/index.html
@@ -1,5 +1,19 @@
 {% extends "base.html" %}
-
+	{% block searchbox %}
+	<div class="navbox">
+		<div class="title">
+			<h3>Search Box</h3>
+		</div>
+		<div class="content">
+			<form action="/research" method="post">
+				<p>Search for a nickname:</p>
+                <input name="research" type="text" value="Search...">
+                <input type="submit" value="ok">
+			</form>
+		</div>
+	</div>
+	{% endblock %}
+	
 	{% block maincontent %}
         {% ifnotequal user_status "anon" %}
             {% ifequal user_status "unregistered" %}
