Renommage de research à search. La recherche dans la base de donnée et la recherche effectuée ne tiennent pas de la casse (tout en lower case).

--- a/search_result.html
+++ b/search_result.html
@@ -9,7 +9,7 @@
 	
 	{% block tabmenu %}
 		<li><a href="/">Pints</a></li>
-		<li><a href="/research" id="current">Search Results</a></li>
+		<li><a href="/search" id="current">Search Results</a></li>
 	{% endblock %}
 
 	{% block maincontent %}
