--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 			<h3>Search Box</h3>
 		</div>
 		<div class="content">
-			<form action="/research" method="post">
+			<form action="/search" method="post">
 				<p>Search for a nickname:</p>
-                <input name="research" type="text" value="Search...">
+                <input name="search" type="text" value="Search...">
                 <input type="submit" value="ok">
 			</form>
 		</div>
