La recherche rend l'utilisateur demandé à la casse près; donc mise en place d'une page de profil par utilisateur. (histoire que la recherche serve à quelque chose...) Ce qui induit plein de lien vers la page du profil à chaque fois qu'on voit un nom d'utilisateur... Le style de la page en question sera à revoir.

--- a/base.html
+++ b/base.html
@@ -62,6 +62,7 @@
 			</div>
 		{% endifnotequal %}
 
+		{% block following %}
 			<div class="navbox">
 				<div class="title">
 					<h3>Info</h3>
@@ -71,14 +72,14 @@
 					<div>
 						<h4>Following</h4>
 					{% for followed in followed_list %}
-							<a>{{ followed.nickname }}</a>
+							<a href="/profil/{{ followed.nickname }}">{{ followed.nickname }}</a>
 							<br>
 					{% endfor %}
 					</div>
 					<div>
 						<h4>Followers</h4>
 					{% for follower in followers_list %}
-							<a>{{ follower.nickname }}</a>
+							<a href="/profil/{{ follower.nickname }}">{{ follower.nickname }}</a>
 							<br>
 					{% endfor %}
 					</div>
@@ -89,7 +90,21 @@
 				{% endifnotequal %}
 				</div>
 			</div>
+			{% endblock %}
+			
 			{% block searchbox %}
+			<div class="navbox">
+				<div class="title">
+					<h3>Search Box</h3>
+				</div>
+				<div class="content">
+					<form action="/search" method="post">
+						<p>Search for a nickname:</p>
+		                <input name="search" type="text" value="Search...">
+		                <input type="submit" value="ok">
+					</form>
+				</div>
+			</div>
 			{% endblock %}
 		</div>
 
