--- a/index.html
+++ b/index.html
@@ -1,18 +1,4 @@
 {% extends "base.html" %}
-	{% block searchbox %}
-	<div class="navbox">
-		<div class="title">
-			<h3>Search Box</h3>
-		</div>
-		<div class="content">
-			<form action="/search" method="post">
-				<p>Search for a nickname:</p>
-                <input name="search" type="text" value="Search...">
-                <input type="submit" value="ok">
-			</form>
-		</div>
-	</div>
-	{% endblock %}
 	
 	{% block maincontent %}
         {% ifnotequal user_status "anon" %}
@@ -42,7 +28,7 @@
                 <p>{{ message.content|escape }}</p>
             </blockquote>
             <cite class="{% cycle left,right %}">
-                <b>{{ message.author.nickname }}</b>
+                <a href="/profil/{{ message.author.nickname }}"><b>{{ message.author.nickname }}</b></a>
             </cite>
         </div>
         {% endfor %}
