--- a/search_result.html
+++ b/search_result.html
@@ -7,6 +7,9 @@
 	<cite>&#8220;Share and share alike.&#8221;</cite>
 	{% endblock %}
 	
+	{% block following %}
+	{% endblock %}
+	
 	{% block tabmenu %}
 		<li><a href="/">Pints</a></li>
 		<li><a href="/search" id="current">Search Results</a></li>
