L'ajout d'une personne dans la liste des suivis ce fait dorénavant sur la page de cette personne (à travers un bouton 'Follow'), uniformisation des noms dans les différents scripts (user_account devient current_user), suppression du fichier index.yaml (spécifique à chaque développeur et généré automatiquement, donc suppression du dépôt). Il faudra ajouter un brin de style plus beau à tout ça…

--- a/account_settings.html
+++ b/account_settings.html
@@ -29,12 +29,8 @@
 	<form action="/account_settings/post" method="post" class="composer">
 		<div>
 			<p>Enter a new nick if you wish: </p>
-			<input name="nickname" type="text" value={{ user_account.nickname }} />
+			<input type="text" name="nickname" value={{ current_user.nickname }} />
+			<input type="submit" value="ok" />
 		</div>
-	  	<div>
-			<p>Any one you want to follow?</p>
-			<input name="friend_added" type="text">
-			<input type="submit" value="ok">
-	    </div>
 	</form>
 	{% endblock %}
