--- a/account_settings.html
+++ b/account_settings.html
@@ -2,11 +2,6 @@
 
 	{% block title %}Pint - Account Settings{% endblock %}
 
-	{% block top %}
-	<h1>Pint</h1>
-	<cite>&#8220;Share and share alike.&#8221;</cite>
-	{% endblock %}
-
 	{% block leftblocs %}
 	<div class="navbox">
 		<div class="title">
@@ -20,12 +15,12 @@
 	</div>
 	{% endblock %}
 	
-	{% block tabmenu %}
+	{% block tabs %}
 		<li><a href="/">Pints</a></li>
 		<li><a href="/account_settings" id="current">Account Settings</a></li>
 	{% endblock %}
 	
-	{% block maincontent %}
+	{% block main %}
 	<form action="/account_settings/post" method="post" class="composer">
 		<div>
 			<p>Enter a new nick if you wish: </p>
